--- a/1.html
+++ b/1.html
@@ -12,6 +12,10 @@
 
 <body>
 
+    <script>
+
+    </script>
+
     <div class="container my-4">
         <!-- Logo & Search Section -->
         <div class="row align-items-center mb-4">
@@ -101,5 +105,8 @@
         </div>
     </div>
 
+    <div style="background: #0053a6; text-align: center; padding: 10px; color: aliceblue;">
+        Copyright © ZZY 2023
+    </div>
 </body>
 </html>
